--- a/FileManagement/src/main/resources/application-dev.yml
+++ b/FileManagement/src/main/resources/application-dev.yml
@@ -1,12 +1,19 @@
 spring:
   datasource:
-    url: jdbc:h2:file:./.dev-db/filemanagement;Mode=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    url: jdbc:h2:file:./.dev-db/filemanagement;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
     username: ken
     password: dev_password
     driver-class-name: org.h2.Driver
 
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 logging:
   level:
@@ -18,3 +25,9 @@ logging:
 file:
   storage:
     base-path: ./dev-storage
+    retention-days: 30
+    allowed-content-types:
+      - application/pdf
+      - image/png
+      - image/jpeg
+      - text/plain
